[package]
name = "falcon"
version = "0.1.0"
description = "An AWK interpreter"
authors = ["Stéphane Campinas <stephane.campinas@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
combine = "3.8.1"
failure = "0.1.5"
failure_derive = "0.1.5"
regex = "1.2.1"
lazy_static = "1.3.0"
structopt = "0.2.18"
exitcode = "1.1.2"
