[package]
name = "falcon"
version = "0.1.0"
description = "An AWK interpreter"
authors = ["Stéphane Campinas <stephane.campinas@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
combine = "3.8"
failure = "0.1"
failure_derive = "0.1"
regex = "1.2"
lazy_static = "1.3"
structopt = { version = "0.2", features = ["color"] }
exitcode = "1.1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "0.11"
