[package]
name = "falcon"
version = "0.1.0"
description = "An AWK interpreter"
authors = ["Stéphane Campinas <stephane.campinas@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
atty = "0.2"
combine = "3.8"
exitcode = "1.1"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.3"
rand = "0.7"
regex = "1.2"
structopt = { version = "0.3", features = ["color"] }

[dev-dependencies]
assert_cmd = "0.11"
tempfile = "3.1"
